# seattle-python-401d16

./: .gitignore  README.md
class-01/demo/class-one-topics/class_one_topics/: lib.py  topics.py
class-01/snakes-cafe/: pyproject.toml
class-01/snakes-cafe/snakes_cafe/: snakes_cafe.py
class-02/demo/fizz-buzz/: pyproject.toml
class-02/demo/fizz-buzz/tests/: test_fizz_buzz.py
class-02/demo/recursion/: pyproject.toml
class-02/demo/recursion/recursion_package/: recursion_module.py
class-02/demo/recursion/tests/: test_recursion.py
class-03/demo/exceptions/: exceptions.ipynb
class-04/demo/dog-pack/: pyproject.toml
class-04/demo/dog-pack/dog_pack/: dogs.py
class-04/demo/dog-pack/tests/: test_dog_pack.py
class-07/demo/testing-io/testing_io/: dice.py  riddler.py
class-07/lab/game_of_greed/: game.py
class-08/demo/counting-things/: counting_things.ipynb
class-09/lab/tests/version_4/: test_game_complete.py
class-15/demo/: test_binary_tree.py
class-17/demo/cf-scrape/: scraper.py
class-18/demo/crypto/: is_english_word.py  number_cipher.py
class-19/fizz-buzz-tree-review/: fizz_buzz_tree.py  pyproject.toml  test_fizz_buzz_tree.py
class-20/: README.md
class-26/demo/django-things/: db.sqlite3  pyproject.toml
class-27/demo/things-project/: db.sqlite3  pyproject.toml
class-28/demo/things-crud/: db.sqlite3  pyproject.toml
class-29/demo/thing-tracker/: pyproject.toml
class-29/demo/thing-tracker/config/: settings.py
class-29/demo/thing-tracker/templates/: _base.html
class-29/demo/thing-tracker/templates/things/: thing-create.html  thing-delete.html  thing-detail.html  thing-list.html  thing-update.html
class-29/demo/thing-tracker/things/: models.py  urls.py  views.py
class-29/demo/thing-tracker/things/migrations/: 0001_initial.py
class-30/demo/: hashtable.py  pyproject.toml  test_hashtable.py
class-31/demos/blog/: db.sqlite3  pyproject.toml  requirements.txt
class-32/demos/blogapi-permissions/: db.sqlite3  pyproject.toml
class-32/demos/blogapi-permissions/blog_project/: settings.py  urls.py
class-32/demos/blogapi-permissions/posts/: models.py  serializers.py  views.py
class-32/demos/blogapi-permissions/posts/migrations/: 0001_initial.py
class-32/demos/blogapi-postgres/: docker-compose.yml
class-33/authenticated-things/: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
class-33/authenticated-things/things/: permissions.py  serializers.py  urls.py
class-33/authenticated-things/things_project/: settings.py  urls.py
class-33/demos/authenticated-things/: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
class-34/: DEMO.md
class-34/demos/sweets-api/: db.sqlite3
class-34/sweets-api/: api_tester.py
class-34/sweets-api/project/: urls.py
class-34/sweets-api/sweets/: apps.py  urls.py
class-35/demos/graph/: graph.py  pyproject.toml  test_graph.py
class-37/demos/magic-eight-ball/: package-lock.json
class-37/dsa/: graph.py  pyproject.toml  test_graph.py
class-38/demos/cookie-stand-v1/: package-lock.json
(+71 files in other folders)
